# hackthon-II

./: .gitignore  CLAUDE.md  DEPLOYMENT-GUIDE.md  FULL-IMPLEMENTATION-COMPLETE.md  GITHUB-READY.md  PHASE-3-COMPLETE-SETUP.md  PHASE-3-IMPLEMENTATION-COMPLETE.md  PHASE-3-INDEX.md  PHASE-3-QUICK-START.md  PHASE-3-ROADMAP.md  PHASE-4-COMPLETE.md  PHASE-4-README.md  PHASE-5-COMPLETE.md  PHASE-5-README.md  QUICK-START.md  README.md  START-HERE.md  deploy-azure.sh  deploy-gcp.sh  docker-compose.yml  minikube-deploy.sh  pyproject.toml  requirements.txt  setup.py  start.sh  tasks.json  todo_app.db
.github/workflows/: ci-cd.yml
.spec-kit/: config.yaml
backend/: CLAUDE.md  Dockerfile  ai_agent.py  auth.py  database.py  kafka_service.py  main.py  mcp_tools.py  notification_service.py  openai_agent.py  recurring_tasks.py  requirements.txt  run.py  run_migrations.py  todo_app.db
backend/migrations/: 001_create_conversations.py  002_create_messages.py
backend/models/: __init__.py  conversation.py  message.py  task.py
backend/routes/: chat.py  tasks.py
backend/schemas/: chat.py
dapr/components/: pubsub-kafka.yaml  secrets-k8s.yaml  state-postgres.yaml
frontend/: CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  package.json.original
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimatedMessage.tsx  AuthProvider.tsx  Authentication.tsx  ChatContainer.tsx  ChatHeader.tsx  DateTime.tsx  FingerprintLock.tsx  (+15 more)
hackathon_todo/: __init__.py  __main__.py  todo.py
specs/: overview-phase3.md  overview.md
src/: todo.py
(+31 files in other folders)
