[project]
name = "hackathon-todo"
version = "0.1.0"
description = "A console-based todo application for the hackathon"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Hackathon Participant", email = "participant@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
todo = "hackathon_todo.todo:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"